[package]
name = "pf_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger="0.10.1"
log="0.4.14"
libc = "0.2.84"
glow = {git="https://github.com/pigfall/glow",branch="tzz_dev_base_on_v0.11.1"}
#rg3d-core = {path="../../Fyrox/rg3d-core"}
rg3d-core = "0.19.0"
thiserror = "1"
fxhash = "0.2.1"
glam = "0.20.5"
#libloading = { version = "^0.7"}
#khronos-egl = { version = "4.0.0"}
#pf_egl = {path="../../pf_egl"}

[target.'cfg(target_os="android")'.dependencies]
bevy = "0.7.0"
ndk-sys="0.3.0"
ndk ="0.6.0"
pf_egl = {path="../../pf_egl"}
